create olivera, stina pages, modify social links on hanne, nina pages

--- a/artists.html
+++ b/artists.html
@@ -167,7 +167,7 @@
     <div class="more">
         A rising star, creating catchy dance and pop music but underpinned by a really good voice with just relentless charm and charisma. 
     </div>
-    <button class="card-btn">BIOGRAPHY</button>
+    <button class="card-btn"> <a href="olivera.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic8"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/4iFfQpzvTJDhqmSi28EhYu?si=kq3CvxWtRti4WK8t2nuX6A" target="_blank">Listen On Spotify</a>
@@ -182,7 +182,7 @@
     <div class="more">
         Technically amazing, worthy of earphones and a quiet hour. Stina sang for her individual listeners, and not ever for crowds. Soft, classic pop.
     </div>
-    <button class="card-btn">BIOGRAPHY</button>
+     <button class="card-btn"> <a href="stinanordenstam.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic9"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/7gPBpCNPTXfU4B6GJ17CwL?si=6UAuzFjOQ7uYjwrhMu7MEg" target="_blank">Listen On Spotify</a>
@@ -198,7 +198,7 @@
     <div class="more">
       Popular for soundtracks, Earlier pop to deeply soulful mature songs clearly defined by a classical music education. Brilliant!
     </div>
-    <button class="card-btn">BIOGRAPHY</button>
+    <button class="card-btn"> <a href="susannesundfor.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic10"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/54KCNI7URCrG6yjQK3Ukow?si=Cx6C5fWcQGGhWlC5gLw97g" target="_blank">Listen On Spotify</a>
@@ -213,7 +213,7 @@
     <div class="more">
         Hugely popular in Denmark, captivates huge audience with just her voice and her guitar. An unexpected pleasure indeed. Dylanesque.
     </div>
-    <button class="card-btn">BIOGRAPHY</button>
+    <button class="card-btn"> <a href="tinadico.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic11"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/6AHLjrNUzvqs8jg5JntmeL?si=gAyxGbmSRKuhSEVBN0hPiA" target="_blank">Listen On Spotify</a>
@@ -228,7 +228,7 @@
     <div class="more">
         Experimental multi-instrumentalist with soft wispy vocals and dreamy indie-pop music. Very endearing talent with high-value production quality.
     </div>
-    <button class="card-btn">BIOGRAPHY</button>
+    <button class="card-btn"> <a href="siljenes.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic12"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/6GJ8RpMtLVpTQOoQVWsoaS?si=9T6GderST4iDlBG__95zsg" target="_blank">Listen On Spotify</a>
