--- a/hannehukkelberg.html
+++ b/hannehukkelberg.html
@@ -141,7 +141,7 @@ In 2006 Hukkelberg released her second album Rykestrasse 68. The album was award
                 ></a>
               </li>
               <li>
-                <a class="imdb" href="https://www.youtube.com/user/huhanneref_=fn_al_nm_1" target="_blank"><i class="fab fa-imdb"></i></a>
+                <a class="imdb" href="https://www.youtube.com/user/huhanneref_=fn_al_nm_1" target="_blank"><i class="fab fa-youtube"></i></a>
               </li>
               <li>
                 <a class="instagram" href="https://www.instagram.com/hannehukkelberg/?hl=en" target="_blank"
