--- a/olivera.html
+++ b/olivera.html
@@ -51,20 +51,20 @@
         <div class="row row-1">
         <div class="col-12 col-md-4 artist-ctnr">
           <div class="intro-pic">
-            <img src="./assets/img/ninakinert2.png" alt="Nina Kinert" />
+            <img src="./assets/img/olivera1a.png" alt="olivera" />
           </div>
         </div>
 
         <div class="col-12 col-sm-8 intro-text">
-          <h1 class="header1">Nina <b>Kinert</b></h1>
+          <h1 class="header1"><b>Olivera</b></h1>
           <p>
-            In 2004 she released her first album Heartbreaktown on her own label Another Records. The following EP Visitor and the album Let There Be Love were issued on the Swedish branch of V2 Records in 2005. In 2006-07 she was featured by Norwegian singer Ane Brun on her concert tours (Live in Scandinavia, 2007).
+            "I don't know where my songs come from. I just listen to the endless radio show inside my head and record the best parts of it. "
+            Originally from Espoo, Finland, singer and songwriter Olivera is an interesting mixture of a modern indie pop artist and a goofy little garden gnome. On her productions she works with the Finnish producer Lenno.
 
-Beside the support of the already established Brun, Kinert rose to prominence in 2007 following the use of her song "Through Your Eyes" in a worldwide publicity campaign for the Swedish car company SAAB (a song she did not write, but lent her voice to).
+"In life things turn to shit pretty often. That’s why I named my first EP” Life Is a Blooper Reel”. But isn’t the blooper reel always the funniest part?” 
 
-In October 2007, she was featured on the Steve Jansen album Slope, singing on "Playground Martyrs (Reprise)" (another version of that song on the album featured Jansen's brother David Sylvian).
+Olivera has also worked as a songwriter and a featuring artist for names like Tiësto, Zaxx, 3LAU, Sonny Alven, Lucian and John Dahlbäck. So far the songs she’s written have been streamed over 35 million times and covered by outlets such as Billboard, Forbes and Scandipop.
 
-In November 2010, she released Red Leader Dream, an album inspired by the Star Wars trilogy. It was issued by her new own label NinkinaRecordings.
           </p>
         </div>
       </div>
@@ -76,20 +76,11 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/romantic/1521737817"
-                >Nina Kinert : Romantic</a
+              <a href="https://music.apple.com/us/artist/olivera/205071714"
+                >Olivera : various tracks </a
               >
             </li>
-            <li>
-              <a            href="https://music.apple.com/us/album/pets-friends/815058840">
-                Nina Kinert : Pets and Friends  </a>
-            </li>
-            <li>
-              <a
-                href="https://music.apple.com/us/album/let-there-be-love/815051871"
-                >Nina Kinert : Let there be love
-              </a>
-            </li>
+            
           </ul>
             </div>
           <div class="col-12 col-md-4 concert-pic">
@@ -105,7 +96,7 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
             <iframe class="youtube-responsive"
               width="675"
               height="380"
-             src="https://www.youtube.com/embed/6i0pIqrRxmw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+              src="https://www.youtube.com/embed/SwZTgqjauYs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
             ></iframe>
          </div>
          </div>
@@ -114,7 +105,7 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
           <div class="col-12 media-box2">
                  <div class="spotify">
                     <iframe class="spotify-responsive"
-                src="https://open.spotify.com/embed/artist/6uRl4Lp821EvTTEYmboj8O" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+               src="https://open.spotify.com/embed/artist/4iFfQpzvTJDhqmSi28EhYu" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
          </div>
           </div>
           
@@ -129,7 +120,7 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
         <div class="col-sm-6 col-xs-12">
             <ul class="social-icons">
               <li>
-                <a class="facebook" href="https://www.facebook.com/theninakinert" target="_blank"
+                <a class="facebook" href="https://www.facebook.com/helloimolivera/" target="_blank"
                   ><i class="fab fa-facebook-square"></i
                 ></a>
               </li>
@@ -139,10 +130,10 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
                 ></a>
               </li>
               <li>
-                <a class="imdb" href="https://www.youtube.com/channel/UC_sNov3M4aOQK8CD_-mEVvg" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a class="imdb" href="https://www.youtube.com/channel/UCD4nvAzSvvNWsx9qma5DsjQ" target="_blank"><i class="fab fa-youtube"></i></a>
               </li>
               <li>
-                <a class="instagram" href="https://www.instagram.com/ninakinert/" target="_blank"
+                <a class="instagram" href="https://www.instagram.com/oliveramusic/" target="_blank"
                   ><i class="fab fa-instagram-square"></i
                 ></a>
               </li>
@@ -161,8 +152,8 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
               <h3>The live schedule is subject to change</h3>
               <span
                 ><a
-                  href="https://www.ticketmaster.com/nina-kinert-tickets/artist/2523800" target="_blank"
-                  >To see if Nina is playing near you soon, check this
+                  href="https://www.ticketmaster.com" target="_blank"
+                  >To see if Olivera is playing near you soon, check this
                   Ticketmaster link</a
                 ></span
               >
