--- a/stinanordenstam.html
+++ b/stinanordenstam.html
@@ -51,20 +51,21 @@
         <div class="row row-1">
         <div class="col-12 col-md-4 artist-ctnr">
           <div class="intro-pic">
-            <img src="./assets/img/ninakinert2.png" alt="Nina Kinert" />
+            <img src="./assets/img/agnes_obel1a.png" alt="Agnes Obel" />
           </div>
         </div>
 
         <div class="col-12 col-sm-8 intro-text">
-          <h1 class="header1">Nina <b>Kinert</b></h1>
+          <h1 class="header1">Agnes <b>Obel</b></h1>
           <p>
-            In 2004 she released her first album Heartbreaktown on her own label Another Records. The following EP Visitor and the album Let There Be Love were issued on the Swedish branch of V2 Records in 2005. In 2006-07 she was featured by Norwegian singer Ane Brun on her concert tours (Live in Scandinavia, 2007).
-
-Beside the support of the already established Brun, Kinert rose to prominence in 2007 following the use of her song "Through Your Eyes" in a worldwide publicity campaign for the Swedish car company SAAB (a song she did not write, but lent her voice to).
-
-In October 2007, she was featured on the Steve Jansen album Slope, singing on "Playground Martyrs (Reprise)" (another version of that song on the album featured Jansen's brother David Sylvian).
-
-In November 2010, she released Red Leader Dream, an album inspired by the Star Wars trilogy. It was issued by her new own label NinkinaRecordings.
+            Agnes Caroline Thaarup Obel (born 28 October 1980) is a Danish
+            singer, songwriter, and musician. Her first album, Philharmonics,
+            was released by PIAS Recordings on 4 October 2010 and was certified
+            gold in June 2011 by the Belgian Entertainment Association (BEA)
+            after selling 10,000 Copies. At the Danish Music Awards in November
+            2011, Obel won five prizes, including Best Album and Best Debut
+            Artist. Citizen of Glass, her third album, received the IMPALA Album
+            of the Year Award 2016.
           </p>
         </div>
       </div>
@@ -76,18 +77,20 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/romantic/1521737817"
-                >Nina Kinert : Romantic</a
+              <a href="https://music.apple.com/ie/album/myopia/1483221211"
+                >Agnes Obel : Myopia</a
               >
             </li>
             <li>
-              <a            href="https://music.apple.com/us/album/pets-friends/815058840">
-                Nina Kinert : Pets and Friends  </a>
+              <a
+                href="https://music.apple.com/ie/album/citizen-of-glass/1132114456"
+                >Agnes Obel: Citizen of Glass</a
+              >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/let-there-be-love/815051871"
-                >Nina Kinert : Let there be love
+                href="https://music.apple.com/ie/album/philharmonics-deluxe-edition/431226423"
+                >Agnes Obel: Philharmonics
               </a>
             </li>
           </ul>
@@ -105,7 +108,10 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
             <iframe class="youtube-responsive"
               width="675"
               height="380"
-             src="https://www.youtube.com/embed/6i0pIqrRxmw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+              src="https://www.youtube.com/embed/32kYH6XZrIo"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
             ></iframe>
          </div>
          </div>
@@ -114,7 +120,7 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
           <div class="col-12 media-box2">
                  <div class="spotify">
                     <iframe class="spotify-responsive"
-                src="https://open.spotify.com/embed/artist/6uRl4Lp821EvTTEYmboj8O" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                 src="https://open.spotify.com/embed/artist/7gPBpCNPTXfU4B6GJ17CwL" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
          </div>
           </div>
           
@@ -129,20 +135,20 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
         <div class="col-sm-6 col-xs-12">
             <ul class="social-icons">
               <li>
-                <a class="facebook" href="https://www.facebook.com/theninakinert" target="_blank"
+                <a class="facebook" href="https://www.facebook.com/agnesobelofficial" target="_blank"
                   ><i class="fab fa-facebook-square"></i
                 ></a>
               </li>
               <li>
-                <a class="twitter" href="https://twitter.com/" target="_blank"
+                <a class="twitter" href="https://twitter.com/agnesobel" target="_blank"
                   ><i class="fab fa-twitter-square"></i
                 ></a>
               </li>
               <li>
-                <a class="imdb" href="https://www.youtube.com/channel/UC_sNov3M4aOQK8CD_-mEVvg" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a class="imdb" href="https://www.imdb.com/name/nm1425679/?ref_=fn_al_nm_1" target="_blank"><i class="fab fa-imdb"></i></a>
               </li>
               <li>
-                <a class="instagram" href="https://www.instagram.com/ninakinert/" target="_blank"
+                <a class="instagram" href="https://agnesobel.ffm.to/instagram" target="_blank"
                   ><i class="fab fa-instagram-square"></i
                 ></a>
               </li>
@@ -161,9 +167,9 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
               <h3>The live schedule is subject to change</h3>
               <span
                 ><a
-                  href="https://www.ticketmaster.com/nina-kinert-tickets/artist/2523800" target="_blank"
-                  >To see if Nina is playing near you soon, check this
-                  Ticketmaster link</a
+                  href="https://www.ticketmaster.com" target="_blank"
+                  >To see if Stina is playing near you soon, check this
+                  Ticketmaster link, but she has never really toured so this is pointless!</a
                 ></span
               >
            
