finish stina page, create tina page

--- a/stinanordenstam.html
+++ b/stinanordenstam.html
@@ -51,21 +51,18 @@
         <div class="row row-1">
         <div class="col-12 col-md-4 artist-ctnr">
           <div class="intro-pic">
-            <img src="./assets/img/agnes_obel1a.png" alt="Agnes Obel" />
+            <img src="./assets/img/stina_nordenstam2.png" alt="Agnes Obel" />
           </div>
         </div>
 
         <div class="col-12 col-sm-8 intro-text">
-          <h1 class="header1">Agnes <b>Obel</b></h1>
+          <h1 class="header1">Stina <b>Nordenstam</b></h1>
           <p>
-            Agnes Caroline Thaarup Obel (born 28 October 1980) is a Danish
-            singer, songwriter, and musician. Her first album, Philharmonics,
-            was released by PIAS Recordings on 4 October 2010 and was certified
-            gold in June 2011 by the Belgian Entertainment Association (BEA)
-            after selling 10,000 Copies. At the Danish Music Awards in November
-            2011, Obel won five prizes, including Best Album and Best Debut
-            Artist. Citizen of Glass, her third album, received the IMPALA Album
-            of the Year Award 2016.
+            Nordenstam was born in Stockholm on 4 March 1969. As a child, she was highly influenced by her father's classical and jazz music collection. Her voice led to early comparisons with artists such as Rickie Lee Jones and Björk. Her early albums, Memories of a Color and And She Closed Her Eyes were jazz-influenced with elements of alternative rock. 1997's Dynamite began a more experimental path—most of the album was filled with distorted guitars and unusual beats. A 1998 cover album, People Are Strange, followed in the same vein. In 2001 Nordenstam went with a more pop-influenced sound on This Is Stina Nordenstam, and features guest vocals from Brett Anderson. Nordenstam's 2004 album The World Is Saved continued the path set on This Is..., but presents a more realized sound and acknowledges her earlier jazz influences.
+
+Her guest appearances include collaboration with David Sylvian's band "Nine Horses", including tracks from the album Snow Borne Sorrow and the Money for All EP. She also provided vocals for Vangelis' song "Ask the Mountains", Yello's "To the Sea", and a collaboration with Anton Fier. In 2000, Nordenstam featured on a track from Danish prog-rockers Mew's second album Half the World Is Watching Me. The track was later re-recorded for the band's international debut Frengers.
+
+Nordenstam is also accomplished in fields such as photography and music video directing. She is known to be reclusive: she gives very few interviews and she hasn't performed live since the Memories of a Color tour. She even alters her appearance using wigs and make-up for album covers and magazines.
           </p>
         </div>
       </div>
@@ -77,20 +74,20 @@
 
           <ul>
             <li>
-              <a href="https://music.apple.com/ie/album/myopia/1483221211"
-                >Agnes Obel : Myopia</a
+              <a href="https://music.apple.com/us/album/and-she-closed-her-eyes/968067459"
+                >Stina Nordenstam : And She Closed Her Eyes</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/ie/album/citizen-of-glass/1132114456"
-                >Agnes Obel: Citizen of Glass</a
+                href="https://music.apple.com/us/album/this-is-stina-nordenstam/1458137632"
+                >Stina Nordenstam : This is Stina Nordenstam</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/ie/album/philharmonics-deluxe-edition/431226423"
-                >Agnes Obel: Philharmonics
+                href="https://music.apple.com/us/album/the-world-is-saved/1444185970"
+                >Stina Nordenstam : The World is Saved
               </a>
             </li>
           </ul>
@@ -108,10 +105,7 @@
             <iframe class="youtube-responsive"
               width="675"
               height="380"
-              src="https://www.youtube.com/embed/32kYH6XZrIo"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
+              src="https://www.youtube.com/embed/6Erp5ghuXkg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
             ></iframe>
          </div>
          </div>
@@ -135,20 +129,20 @@
         <div class="col-sm-6 col-xs-12">
             <ul class="social-icons">
               <li>
-                <a class="facebook" href="https://www.facebook.com/agnesobelofficial" target="_blank"
+                <a class="facebook" href="https://www.facebook.com" target="_blank"
                   ><i class="fab fa-facebook-square"></i
                 ></a>
               </li>
               <li>
-                <a class="twitter" href="https://twitter.com/agnesobel" target="_blank"
+                <a class="twitter" href="https://twitter.com" target="_blank"
                   ><i class="fab fa-twitter-square"></i
                 ></a>
               </li>
               <li>
-                <a class="imdb" href="https://www.imdb.com/name/nm1425679/?ref_=fn_al_nm_1" target="_blank"><i class="fab fa-imdb"></i></a>
+                <a class="imdb" href="https://www.youtube.com/channel/UCZLkIquw42mMcWWinfRuN8Q" target="_blank"><i class="fab fa-youtube"></i></a>
               </li>
               <li>
-                <a class="instagram" href="https://agnesobel.ffm.to/instagram" target="_blank"
+                <a class="instagram" href="www.instagram.com" target="_blank"
                   ><i class="fab fa-instagram-square"></i
                 ></a>
               </li>
