--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         </div>
 
         <div class="col-12 col-md-8 intro-text">
-          <h1 class="header1">What is Ice<b>flow</b></h1>
+          <h1 class="header1">What is ice<b>flow</b>?</h1>
           <p>
-            The Ice Flow project aimed at introducing the singers and
+            Its like a Nordic Music Database! The Ice Flow project was created to introduce the female singers and
             songwriters of the Nordic Region to the rest of the world. We hope
             to bring you names you never heard of and to gain an insight into
             the talent that resides in the Nordic region
