modify link image link for elperrodelmar.html

--- a/elperrodelmar.html
+++ b/elperrodelmar.html
@@ -89,7 +89,7 @@
           </ul>
             </div>
           <div class="col-12 col-md-4 concert-pic">
-          <img src="../assets/img/records.jpg" alt="latest album releases">
+          <img src="./assets/img/records.jpg" alt="latest album releases">
           </div>
         </div>
         <div class="container media-container">
