fix image path for several  artist pages

--- a/jennieabrahamson.html
+++ b/jennieabrahamson.html
@@ -152,7 +152,7 @@ With the support of his friends Friska Viljor and Ane Brun , Abrahamson founded 
 
         <div class="row row-1">
           <div class="col-12 col-md-4 concert-pic">
-            <img src="../assets/img/concert.jpg" alt="concert" />
+            <img src="./assets/img/concert.jpg" alt="concert" />
           </div>
           <div class="col-12 col-md-8 intro-text">
             <div>
