--- a/stinanordenstam.html
+++ b/stinanordenstam.html
@@ -153,7 +153,7 @@ Nordenstam is also accomplished in fields such as photography and music video di
 
         <div class="row row-1">
           <div class="col-12 col-md-4 concert-pic">
-            <img src="../assets/img/concert.jpg" alt="concert" />
+            <img src="./assets/img/concert.jpg" alt="concert" />
           </div>
           <div class="col-12 col-md-8 intro-text">
             <div>
