--- a/susannesundfor.html
+++ b/susannesundfor.html
@@ -151,7 +151,7 @@ Her third studio album, The Silicone Veil (2012) topped the Norwegian album char
 
         <div class="row row-1">
           <div class="col-12 col-md-4 concert-pic">
-            <img src="../assets/img/concert.jpg" alt="concert" />
+            <img src="./assets/img/concert.jpg" alt="concert" />
           </div>
           <div class="col-12 col-md-8 intro-text">
             <div>
