--- a/tinadico.html
+++ b/tinadico.html
@@ -151,7 +151,7 @@ In Denmark she performs both under her real name, Tina Dickow, and under the ado
 
         <div class="row row-1">
           <div class="col-12 col-md-4 concert-pic">
-            <img src="../assets/img/concert.jpg" alt="concert" />
+            <img src="./assets/img/concert.jpg" alt="concert" />
           </div>
           <div class="col-12 col-md-8 intro-text">
             <div>
