--- a/ninakinert.html
+++ b/ninakinert.html
@@ -153,7 +153,7 @@ In November 2010, she released Red Leader Dream, an album inspired by the Star W
 
         <div class="row row-1">
           <div class="col-12 col-md-4 concert-pic">
-            <img src="../assets/img/concert.jpg" alt="concert" />
+            <img src="./assets/img/concert.jpg" alt="concert" />
           </div>
           <div class="col-12 col-md-8 intro-text">
             <div>
