fix image name in jennieabrahamson.html

--- a/jennieabrahamson.html
+++ b/jennieabrahamson.html
@@ -51,7 +51,7 @@
         <div class="row row-1">
         <div class="col-12 col-md-4 artist-ctnr">
           <div class="intro-pic">
-            <img src="./assets/img/Jennie Abrahamson1a.png" alt="Jennie Abrahamson" />
+            <img src="./assets/img/jennieabrahamson1a.png" alt="Jennie Abrahamson" />
           </div>
         </div>
 
