modify images in olivera.html

--- a/olivera.html
+++ b/olivera.html
@@ -144,7 +144,7 @@ Olivera has also worked as a songwriter and a featuring artist for names like Ti
 
         <div class="row row-1">
           <div class="col-12 col-md-4 concert-pic">
-            <img src="../assets/img/concert.jpg" alt="concert" />
+            <img src="./assets/img/concert.jpg" alt="concert" />
           </div>
           <div class="col-12 col-md-8 intro-text">
             <div>
