--- a/siljenes.html
+++ b/siljenes.html
@@ -145,7 +145,7 @@ Nes has a background as a classical pianist. On her albums she plays all instrum
 
         <div class="row row-1">
           <div class="col-12 col-md-4 concert-pic">
-            <img src="../assets/img/concert.jpg" alt="concert" />
+            <img src="./assets/img/concert.jpg" alt="concert" />
           </div>
           <div class="col-12 col-md-8 intro-text">
             <div>
