update footer social links - all pages

--- a/artists.html
+++ b/artists.html
@@ -298,20 +298,20 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <ul class="social-icons">
               <li>
-                <a class="facebook" href="www.facebook.com"
+                <a class="facebook" href="https://www.facebook.com" target="_blank"
                   ><i class="fab fa-facebook-square"></i
                 ></a>
               </li>
               <li>
-                <a class="twitter" href="#"
+                <a class="twitter" href="https://www.twitter.com" target="_blank"
                   ><i class="fab fa-twitter-square"></i
                 ></a>
               </li>
               <li>
-                <a class="imdb" href="#"><i class="fab fa-imdb"></i></a>
+                <a class="imdb" href="https://www.youtube.com"><i class="fab fa-youtube" target="_blank"></i></a>
               </li>
               <li>
-                <a class="instagram" href="#"
+                <a class="instagram" href="https://www.instagram.com" target="_blank"
                   ><i class="fab fa-instagram-square"></i
                 ></a>
               </li>
@@ -320,7 +320,5 @@
         </div>
       </div>
     </footer>
-
   </body>
-
 </html>
