--- a/index.html
+++ b/index.html
@@ -144,18 +144,18 @@
             <h6>Categories</h6>
             <ul class="footer-links">
               <li>
-                <a href="https://en.wikipedia.org/wiki/Denmark">Denmark</a>
+                <a href="https://en.wikipedia.org/wiki/Denmark" target="_blank">Denmark</a>
               </li>
-              <li><a href="https://en.wikipedia.org/wiki/Sweden">Sweden</a></li>
-              <li><a href="https://en.wikipedia.org/wiki/Norway">Norway</a></li>
+              <li><a href="https://en.wikipedia.org/wiki/Sweden" target="_blank">Sweden</a></li>
+              <li><a href="https://en.wikipedia.org/wiki/Norway" target="_blank">Norway</a></li>
               <li>
-                <a href="https://en.wikipedia.org/wiki/Iceland">Iceland</a>
-              </li>
-              <li>
-                <a href="https://en.wikipedia.org/wiki/Finland">Finland</a>
+                <a href="https://en.wikipedia.org/wiki/Iceland" target="_blank">Iceland</a>
               </li>
               <li>
-                <a href="https://en.wikipedia.org/wiki/Greenland">Greenland</a>
+                <a href="https://en.wikipedia.org/wiki/Finland" target="_blank">Finland</a>
+              </li>
+              <li>
+                <a href="https://en.wikipedia.org/wiki/Greenland" target="_blank">Greenland</a>
               </li>
             </ul>
           </div>
@@ -184,20 +184,20 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <ul class="social-icons">
               <li>
-                <a class="facebook" href="www.facebook.com"
+                <a class="facebook" href="https://www.facebook.com" target="_blank"
                   ><i class="fab fa-facebook-square"></i
                 ></a>
               </li>
               <li>
-                <a class="twitter" href="#"
+                <a class="twitter" href="https://www.twitter.com" target="_blank"
                   ><i class="fab fa-twitter-square"></i
                 ></a>
               </li>
               <li>
-                <a class="imdb" href="#"><i class="fab fa-imdb"></i></a>
+                <a class="imdb" href="https://www.youtube.com"><i class="fab fa-youtube" target="_blank"></i></a>
               </li>
               <li>
-                <a class="instagram" href="#"
+                <a class="instagram" href="https://www.instagram.com" target="_blank"
                   ><i class="fab fa-instagram-square"></i
                 ></a>
               </li>
