--- a/elperrodelmar.html
+++ b/elperrodelmar.html
@@ -150,7 +150,7 @@
 
         <div class="row row-1">
           <div class="col-12 col-md-4 concert-pic">
-            <img src="../assets/img/concert.jpg" alt="concert" />
+            <img src="./assets/img/concert.jpg" alt="concert" />
           </div>
           <div class="col-12 col-md-8 intro-text">
             <div>
@@ -225,23 +225,23 @@
             </p>
           </div>
 
-          <div class="col-md-4 col-sm-6 col-xs-12">
+           <div class="col-md-4 col-sm-6 col-xs-12">
             <ul class="social-icons">
               <li>
-                <a class="facebook" href="www.facebook.com"
+                <a class="facebook" href="https://www.facebook.com" target="_blank"
                   ><i class="fab fa-facebook-square"></i
                 ></a>
               </li>
               <li>
-                <a class="twitter" href="#"
+                <a class="twitter" href="https://www.twitter.com" target="_blank"
                   ><i class="fab fa-twitter-square"></i
                 ></a>
               </li>
               <li>
-                <a class="imdb" href="#"><i class="fab fa-imdb"></i></a>
+                <a class="imdb" href="https://www.youtube.com"><i class="fab fa-youtube" target="_blank"></i></a>
               </li>
               <li>
-                <a class="instagram" href="#"
+                <a class="instagram" href="https://www.instagram.com" target="_blank"
                   ><i class="fab fa-instagram-square"></i
                 ></a>
               </li>
